2008-12-22  Alexander Fehr  <pizzapunk gmail com>

  * mpc-0.14-1:
  New upstream release.
  New maintainer.
  Changed url.
  Added !emptydirs option.
  Changed download location to downloads.sourceforge.net.
  Added ChangeLog.