@@ -3,16 +3,16 @@
 # Contributor: Link Dupont <link@subpop.net>
 
 pkgname=mpc
-pkgver=0.14
+pkgver=0.15
 pkgrel=1
 pkgdesc="Minimalist command line interface to MPD"
 arch=('i686' 'x86_64')
 url="http://mpd.wikia.com/wiki/Client:Mpc"
-license=('GPL')
+license=('GPL2')
 depends=('glibc')
 options=('!emptydirs')
 source=(http://downloads.sourceforge.net/musicpd/mpc-$pkgver.tar.bz2)
-md5sums=('f4218602342cf322872a41dfe0cc72e1')
+md5sums=('48897aeb3a7ee5c64f30e56789f105a8')
 
 build() {
   cd "$srcdir/mpc-$pkgver"
